--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ textarea:focus {
         <select name="course" required>
           <option value="">Select Course</option>
           <option value="B.Tech">B.Tech</option>
+          <option value="B.E">B.E</option>
           <option value="B.Sc">B.Sc</option>
           <option value="BCA">BCA</option>
           <option value="MCA">MCA</option>
@@ -149,3 +150,4 @@ textarea:focus {
 
 </body>
 </html>
+
